--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
 
     <!-- Description Section -->
     <section class="description">
-        <h2>Our Services</h2>
-        <p>We offer a wide range of services to help you achieve your business goals.</p>
+        <h2>gogas Services</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <div class="btn-container">
             <button class="btn">Our Services</button>
             <button class="btn">Get a Quote</button>
