added google map and contact information its works

--- a/index.html
+++ b/index.html
@@ -113,6 +113,36 @@
         </div>
     </section>
 
+    <!-- Contact Information Section -->
+    <section class="contact-info-section">
+        <div class="contact-part">
+            <h3>Our Location</h3>
+            <p>123 Main St, Springfield</p>
+            <p>City, State, ZIP</p>
+        </div>
+        <div class="contact-part">
+            <h3>Contact Details</h3>
+            <p>Phone: (123) 456-7890</p>
+            <p>Email: info@company.com</p>
+            <p>Fax: (123) 456-7891</p>
+        </div>
+        <div class="contact-part">
+            <h3>Additional Information</h3>
+            <p>For any inquiries, feel free to reach out to us via email or phone.</p>
+        </div>
+    </section>
+    <!-- Google Map Section -->
+    <section class="google-map-section">
+        <iframe 
+            src="https://www.google.com/maps/embed?pb=YOUR_GOOGLE_MAP_EMBED_URL" 
+            width="100%" 
+            height="450" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy">
+        </iframe>
+    </section>
+
     <!-- Fullscreen Image Modal -->
     <div class="fullscreen-modal" id="fullscreenModal">
         <span class="close" onclick="closeFullscreen()">×</span>
