--- a/index.html
+++ b/index.html
@@ -142,6 +142,14 @@
             loading="lazy">
         </iframe>
     </section>
+    <!-- Footer Section -->
+    <footer class="footer">
+        <div class="footer-content">
+            <p>&copy; 2025 GoGa Company. All Rights Reserved.</p>
+            <p>Email: info@company.com</p>
+        </div>
+    </footer>
+
 
     <!-- Fullscreen Image Modal -->
     <div class="fullscreen-modal" id="fullscreenModal">
