added on header buttons

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <div class="company-name">GoGa company</div>
         <div class="contact-info">
             <a href="mailto:info@company.com">Contact Us</a>
+            <a href="mailto:info@company.com">info</a>
+            <a href="mailto:info@company.com">others</a>
         </div>
     </header>
 
