change button style

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div class="overlay">
             <h1>Welcome to Our Company</h1>
             <div class="buttons">
-                <button class="btn">Learn More</button>
-                <button class="btn">Contact</button>
+                <button class="button-86">Learn More</button>
+                <button class="button-86">Contact</button>
             </div>
         </div>
         <img src="make.png" alt="Company Image" >
@@ -39,8 +39,8 @@
         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <div class="btn-container">
-            <button class="btn">Our Services</button>
-            <button class="btn">Get a Quote</button>
+            <button class="button-86">Our Services</button>
+            <button class="button-86">Get a Quote</button>
         </div>
     </section>
 
